# elims

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vale.ini  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.override.yml  compose.traefik.yml  compose.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  sonar-project.properties  versions.json
.github/: dependabot.yml  labeler.yml  latest-changes-template.jinja2
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-and-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  general.yml  question.yml
.github/workflows/: add-to-project.yml  backend.yml  ci.yml  deploy-docs.yml  deploy-production.yml  deploy-staging.yml  documentation.yml  elims-common.yml  elims-raspberry.yml  frontend.yml  issue-manager.yml  labeler.yml  latest-changes.yml  lint-backend.yml  lint-frontend.yml  pre-commit.yml  test-backend.yml  test-docker-compose.yml  test-frontend.yml
.vale/: styles.yml
backend/: Dockerfile  README.md  __init__.py  alembic.ini  main.py  pyproject.toml  run_subscriber.ps1
backend/app/: __init__.py  config.py  db.py  logger.py  main.py  routers.py
backend/app/alembic/: README.md  env.py
backend/app/alembic/versions/: 001_add_temperature_table.py
backend/app/api/: __init__.py
backend/app/api/instruments/: constants.py  exceptions.py  routes.py  services.py
backend/app/api/locations/: __init__.py  models.py  routes.py  services.py
backend/app/api/temperature/: __init__.py  constants.py  exceptions.py  models.py  routes.py  schemas.py  services.py
backend/app/core/: __init__.py
backend/app/mqtt/: __init__.py  publisher.py  subscriber.py
backend/config/mosquitto/certs/: ca.crt  ca.key  ca.srl  client.csr  client.key  server.csr
backend/tests/: __init__.py  conftest.py
backend/tests/api/: __init__.py
backend/tests/app/: __init__.py
backend/tests/app/instruments/: test_constants.py  test_exceptions.py  test_models.py  test_routes.py  test_schemas.py  test_services.py  test_services_intergation.py
backend/tests/app/locations/: __init__.py  test_constants.py  test_exceptions.py  test_models.py  test_routes.py  test_schemas.py  test_services.py  test_services_intergation.py
backend/tests/core/: __init__.py
config/alloy/: config.alloy
config/loki/: loki-config.yml
config/mosquitto/: acl  mosquitto.conf  mqtt_certificate.ps1  mqtt_certificate.sh  passwd  passwd.example
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/backend/: index.html
dev/code_of_conduct/: index.html
dev/contributing/: index.html
dev/frontend/: index.html
dev/js/: mermaid-init.js
dev/license/: index.html
dev/privacy/: index.html
dev/release-notes/: index.html
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/workflows/: index.html
docs/: index.md  license.md  privacy.md  release-notes.md
docs/api/: api.md  db.md  logger.md  routers.md
docs/backend/: index.md
docs/frontend/: index.md
docs/workflows/: automation.md  deployment.md  documentation.md  index.md  test-backend.md  test-frontend.md
elims/: config.py  db.py  elims.py  logger.py  routers.py
elims/api/: __init__.py  api.py  db.py  routers.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: client.ts  main.tsx  routeTree.gen.ts
frontend/tests/: config.ts  home.spec.ts
site/: 404.html  index.html  sitemap.xml
site/backend/: index.html
site/code_of_conduct/: index.html
site/contributing/: index.html
site/frontend/: index.html
site/js/: plotly-latest.min.js
site/license/: index.html
site/privacy/: index.html
tests/: __init__.py  test_config.py  test_elims.py
v0.0.2/: 404.html  index.html  sitemap.xml
(+104 files in other folders)
